WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25099
When creating QNetworkRequests the cache policy is not set.
https://bugs.webkit.org/show_bug.cgi?id=25099
Summary
When creating QNetworkRequests the cache policy is not set.
Benjamin Meyer
Reported
2009-04-08 13:03:04 PDT
When loading from a history item such as when using back/forward the cache policy is set, but not applied to QNetworkRequest.
Attachments
Fix with test
(4.18 KB, patch)
2009-04-08 13:03 PDT
,
Benjamin Meyer
staikos
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Meyer
Comment 1
2009-04-08 13:03:25 PDT
Created
attachment 29343
[details]
Fix with test
Simon Hausmann
Comment 2
2009-04-14 13:46:44 PDT
Landed in
r42516
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug