2009-04-14  Benjamin C Meyer  <benjamin.meyer@torchmobile.com>

Reviewed by George Staikos.

        https://bugs.webkit.org/show_bug.cgi?id=25099

        When creating a QNetworkRequest make sure to populate the
        CacheLoadControlAttribute with the value set by the ResourceRequest::cachePolicy() so that the cache will be used as WebKit expects.

Canonical link: https://commits.webkit.org/34570@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42516 268f45cc-cd09-0410-ab3c-d52691b4dbfc